# gilviewer

./: .bzrignore  .hgignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  ChangeLog  Dockerfile  GilViewerAppUserGuide.md  GilViewerDevelopperGuide.md  GilViewer_build_external_lib.cmake  GilViewer_build_library.cmake  GilViewer_build_sample.cmake  HowToCompileOnLinux.md  Makefile  ProjectHome.md  README  README.md  cmake_install.cmake
cmake/: GilViewerConfig.cmake.in  GilViewer_build_external_lib.cmake  GilViewer_build_library.cmake  GilViewer_build_plugins.cmake  GilViewer_build_sample.cmake  GilViewer_install.cmake
data/: arrangement.cgal
data/CLUT/: dtm.lut  dtm_2.lut  forest.lut  hypso.lut  polar.lut  ramp.tif  random.lut
data/tif/: test_float.tif
doc/: Doxyfile  header.txt
help/: help.html
languages/fr/: GilViewer.po  GilViewerApp.mo  GilViewerApp.po  libGilViewer.mo  libGilViewer.po
plugins/ImageIO/: CMakeLists.txt  ImageIO.cpp
plugins/rotate_image/: CMakeLists.txt  rotate_image.cpp  rotate_image.hpp
qtcreator-build/: CMakeCache.txt  GilViewer.cbp  GilViewerApp  Makefile  cmake_install.cmake
samples/sample_ImageGroundTruthEditor/: CMakeLists.txt  GroundTruthBox.cpp  GroundTruthBox.hpp  ImageGroundTruthApplication.cpp  ImageGroundTruthApplication.hpp  ImageGroundTruthEditor.cpp  ImageGroundTruthEditor.hpp  ImageGroundTruthManager.cpp  ImageGroundTruthManager.hpp  ImageGroundTruthPanelViewer.cpp  ImageGroundTruthPanelViewer.hpp  constantes.h
samples/sample_ImageGroundTruthEditor/Box/: Box.hpp  Box.inl
samples/sample_ImageGroundTruthEditor/STL_ExtensionJPB/: STL_manager.cpp  STL_manager.hpp  STL_manager.inl
samples/sample_subimage/: CMakeLists.txt  sample_subimage.cpp  sample_subimage.hpp  sample_subimage_viewer.cpp  sample_subimage_viewer.hpp
samples/sample_vector_layer/: CMakeLists.txt  sample_vector_layer.cpp  sample_vector_layer.h  sample_vector_layer.hpp  sample_vector_layer.manifest  sample_vector_layer_viewer.cpp  sample_vector_layer_viewer.hpp
src/GilViewer/config/: config.hpp.cmake.in  config_plugins.hpp.cmake.in
src/GilViewer/convenient/: MacrosGilViewer.hpp  macros_gilviewer.hpp  utils.cpp  utils.hpp  wxhelper.cpp  wxhelper.hpp  wxrealpoint.hpp
src/GilViewer/gui/: ApplicationSettings.cpp  ApplicationSettings.hpp  BasicViewerFrame.cpp  BasicViewerFrame.h  GlobalSettingsControl.cpp  GlobalSettingsControl.hpp  ImageLayerSettingsControl.cpp  ImageLayerSettingsControl.hpp  LayerControl.cpp  LayerControl.hpp  LayerControlUtils.cpp  LayerControlUtils.hpp  LayerInfosControl.cpp  LayerInfosControl.hpp  LayerSettingsControl.hpp  NewVectorLayerControl.cpp  NewVectorLayerControl.hpp  PanelManager.cpp  PanelManager.h  PanelViewer.cpp  PanelViewer.hpp  VectorLayerSettingsControl.cpp  VectorLayerSettingsControl.hpp  application_settings.cpp  application_settings.hpp  basic_viewer_frame.cpp  basic_viewer_frame.hpp  define_id.hpp  global_settings_control.cpp  global_settings_control.hpp  image_layer_settings_control.cpp  image_layer_settings_control.hpp  layer_control.cpp  layer_control.hpp  layer_control_utils.cpp  layer_control_utils.hpp  layer_infos_control_impl.cpp  layer_infos_control_impl.h  layer_settings_control.hpp  new_layer_infos_control_impl.cpp  (+8 more)
src/GilViewer/io/: XMLDisplayConfigurationIO.cpp  XMLDisplayConfigurationIO.hpp  gilviewer_file_io.cpp  gilviewer_file_io.hpp  gilviewer_file_io_bmp.cpp  (+35 more)
src/GilViewer/plugins/CGAL/: CMakeLists.txt  cgal_vector_layer.cpp  cgal_vector_layer.hpp  gilviewer_file_io_cgal.cpp  gilviewer_file_io_cgal.hpp
src/GilViewer/plugins/EXR/: CMakeLists.txt  ImageEXR.cpp  ImageEXR.hpp
src/GilViewer/plugins/GDAL/: CMakeLists.txt  GDAL.cpp  GDAL.hpp  get_geometry_visitor.hpp  gilviewer_file_io_gdal_jp2.cpp  gilviewer_file_io_gdal_jp2.hpp  gilviewer_file_io_kml.cpp  gilviewer_file_io_kml.hpp  gilviewer_file_io_shp.cpp  gilviewer_file_io_shp.hpp  ogr_vector_layer.cpp  ogr_vector_layer.hpp
src/GilViewer/plugins/pk1/: CMakeLists.txt  gilviewer_file_io_pk1.cpp  gilviewer_file_io_pk1.hpp
src/GilViewer/plugins/raw_images_io/: CMakeLists.txt  gilviewer_file_io_cr2.cpp  gilviewer_file_io_cr2.hpp  gilviewer_file_io_raw.cpp  gilviewer_file_io_raw.hpp
src/GilViewer/plugins/rotate_image/: CMakeLists.txt  rotate_image.cpp  rotate_image.hpp
src/convenient/: MacrosGilViewer.hpp  MacrosITKViewer.hpp  wxhelper.cpp  wxhelper.hpp
src/gui/: ApplicationSettings.cpp  ApplicationSettings.hpp  BasicViewerFrame.cpp  BasicViewerFrame.h  GlobalSettingsControl.cpp  GlobalSettingsControl.hpp  ImageLayerSettingsControl.cpp  ImageLayerSettingsControl.hpp  LayerControl.cpp  LayerControl.hpp  LayerControlUtils.cpp  LayerControlUtils.hpp  LayerInfosControl.cpp  LayerInfosControl.hpp  LayerSettingsControl.hpp  NewVectorLayerControl.cpp  NewVectorLayerControl.hpp  PanelManager.cpp  PanelManager.h  PanelViewer.cpp  PanelViewer.hpp  VectorLayerSettingsControl.cpp  VectorLayerSettingsControl.hpp  define_id.hpp
src/io/: XMLDisplayConfigurationIO.cpp  XMLDisplayConfigurationIO.hpp
src/layers/: ImageLayer.cpp  ImageLayer.hpp  Layer.hpp  VectorLayer.cpp  VectorLayer.hpp  VectorLayerArc.cpp  VectorLayerArc.hpp  VectorLayerContent.cpp  VectorLayerContent.hpp  VectorLayerGhost.cpp  VectorLayerGhost.h  VectorLayerMultiGeometries.cpp  VectorLayerMultiGeometries.hpp  VectorLayerPoint.cpp  VectorLayerPoint.hpp  VectorLayerPolygon.cpp  VectorLayerPolygon.hpp  image_layer_channel_converter_functor.hpp  image_layer_get_any_image_functor.hpp  image_layer_histogram_functor.hpp  image_layer_infos_functor.hpp  image_layer_min_max_functor.hpp  image_layer_to_string_functor.hpp  image_layer_transparency_functor.hpp
src/tools/: ColorLookupTable.cpp  ColorLookupTable.h  Orientation2D.cpp  Orientation2D.h  PatternFactory.hpp  PatternSingleton.hpp  TypeInfos.h
src/vectorutils/: CreateShapes.cpp  CreateShapes.h
src/wrappers/: WrapperShapelibDBF.cpp  WrapperShapelibDBF.hpp
viewer_app/: FrameViewer.cpp  FrameViewer.hpp  GilViewer.cpp  GilViewer.h  GilViewer.rc  gilviewer_app.cpp  gilviewer_app.hpp  gilviewer_frame.cpp  gilviewer_frame.hpp
(+117 files in other folders)
